--- a/C++Templates/src/TemplateStudy/TemplateStudy.vcxproj.filters
+++ b/C++Templates/src/TemplateStudy/TemplateStudy.vcxproj.filters
@@ -267,6 +267,21 @@
     <ClCompile Include="06_Nontype Template Parameters\NTP_03.cpp">
       <Filter>06_Nontype Template Parameters</Filter>
     </ClCompile>
+    <ClCompile Include="06_Nontype Template Parameters\NTP_04.cpp">
+      <Filter>06_Nontype Template Parameters</Filter>
+    </ClCompile>
+    <ClCompile Include="06_Nontype Template Parameters\NTP_05.cpp">
+      <Filter>06_Nontype Template Parameters</Filter>
+    </ClCompile>
+    <ClCompile Include="06_Nontype Template Parameters\NTP_06.cpp">
+      <Filter>06_Nontype Template Parameters</Filter>
+    </ClCompile>
+    <ClCompile Include="06_Nontype Template Parameters\NTP_07.cpp">
+      <Filter>06_Nontype Template Parameters</Filter>
+    </ClCompile>
+    <ClCompile Include="06_Nontype Template Parameters\NTP_08.cpp">
+      <Filter>06_Nontype Template Parameters</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="03_One Definition Rule\OnePerProgram\ODR_10.h">
